--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@carbon/icons-react": "^10.48.0",
     "@reach/router": "^1.3.4",
+    "@watergis/mapbox-gl-export": "^1.2.21",
     "axios": "^0.27.2",
     "cleave.js": "^1.6.0",
     "dayjs": "^1.11.2",
@@ -33,6 +34,7 @@
     "leaflet": "^1.8.0",
     "leaflet-easyprint": "^2.1.9",
     "leaflet.bigimage": "^1.0.1",
+    "mapbox-gl": "^2.10.0",
     "michi.css": "0.0.12",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
