Add forced build

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A demo kit for Quirino Province projects.",
   "main": "index.js",
   "scripts": {
+    "build:force": "npm install --force && node build.config.js && cp public/* dist",
     "build": "node build.config.js && cp public/* dist",
     "dev": "node dev.config.js"
   },
